--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,14 @@
 <div id="root"></div>
+
+<style>
+  .flex {
+    display: flex;
+    flex-flow: wrap;
+  }
+  .item {
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 10px 10px black;
+    border-top: 5px solid black;
+  }
+</style>
